13.73 - 84.62% compiler_metrics num_static_constructors (android platforms linux platforms, osx-cross, windows2012 platforms) regression on push c0db84bf3f57f80a4911b83ab6c13525786ad69e (Thu Jan 17 2019)
Categories
(Core :: Storage: Quota Manager, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | fixed |
People
(Reporter: igoldan, Assigned: tt)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
Bug 1521017 - Using NS_NAMED_LITERNAL_CSTRING to avoid increasing the number of static constructors;
47 bytes,
text/x-phabricator-request
|
Details | Review |
We have detected a build metrics regression from push:
As author of one of the patches included in that push, we need your help to address this regression.
Regressions:
85% compiler_metrics num_static_constructors android-5-0-aarch64 opt 78.00 -> 144.00
83% compiler_metrics num_static_constructors android-5-0-x86_64 opt 80.00 -> 146.00
83% compiler_metrics num_static_constructors android-4-0-armv7-api16 opt 80.00 -> 146.00
83% compiler_metrics num_static_constructors android-4-2-x86 opt 80.00 -> 146.00
71% compiler_metrics num_static_constructors osx-cross opt 93.00 -> 159.00
66% compiler_metrics num_static_constructors linux64 opt valgrind 98.00 -> 163.00
65% compiler_metrics num_static_constructors linux64 pgo 100.00 -> 165.00
65% compiler_metrics num_static_constructors linux64 opt 100.00 -> 165.00
64% compiler_metrics num_static_constructors linux32 pgo 101.00 -> 166.00
64% compiler_metrics num_static_constructors linux32 opt 101.00 -> 166.00
63% compiler_metrics num_static_constructors windows2012-64 pgo 102.00 -> 166.00
63% compiler_metrics num_static_constructors windows2012-32 pgo 102.00 -> 166.00
62% compiler_metrics num_static_constructors windows2012-64 opt 103.00 -> 167.00
62% compiler_metrics num_static_constructors windows2012-32 opt 103.00 -> 167.00
53% compiler_metrics num_static_constructors linux64 opt base-toolchains 123.00 -> 188.00
49% compiler_metrics num_static_constructors android-5-0-x86_64 debug 119.00 -> 177.00
49% compiler_metrics num_static_constructors android-5-0-aarch64 debug 119.00 -> 177.00
48% compiler_metrics num_static_constructors android-4-0-armv7-api16 debug 120.00 -> 178.00
48% compiler_metrics num_static_constructors android-4-2-x86 debug 122.00 -> 180.00
43% compiler_metrics num_static_constructors osx-cross debug 134.00 -> 192.00
41% compiler_metrics num_static_constructors windows2012-64 debug 140.00 -> 197.00
41% compiler_metrics num_static_constructors windows2012-32 debug 140.00 -> 197.00
40% compiler_metrics num_static_constructors windows2012-64 debug fuzzing 143.00 -> 200.00
39% compiler_metrics num_static_constructors linux32 debug 146.00 -> 203.00
26% compiler_metrics num_static_constructors windows2012-32 opt msvc 537.00 -> 675.00
22% compiler_metrics num_static_constructors windows2012-64 opt msvc 629.00 -> 767.00
22% compiler_metrics num_static_constructors windows2012-aarch64 opt msvc-aarch64 630.00 -> 768.00
14% compiler_metrics num_static_constructors windows2012-32 debug msvc 968.00 -> 1,106.00
14% compiler_metrics num_static_constructors windows2012-aarch64 debug msvc-aarch64 992.00 -> 1,130.00
14% compiler_metrics num_static_constructors windows2012-64 debug msvc 1,005.00 -> 1,143.00
You can find links to graphs and comparison views for each of the above tests at: https://treeherder.mozilla.org/perf.html#/alerts?id=18774
On the page above you can see an alert for each affected platform as well as a link to a graph showing the history of scores for this test. There is also a link to a treeherder page showing the jobs in a pushlog format.
To learn more about the regressing test(s), please see: https://developer.mozilla.org/en-US/docs/Mozilla/Performance/Automated_Performance_Testing_and_Sheriffing/Build_Metrics
*** Please let us know your plans within 3 business days, or the offending patch(es) will be backed out! ***
Reporter | ||
Updated•2 years ago
|
Reporter | ||
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
I'm sorry about this and looking into this
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
Since the number of static_constructors increases sharply after using a global
const nsCString for the key of telemetry data, this patch intends to drop the
number by using the local nsAutoCString.
Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
This patch uses nsLiteralCString instead of nsCString for avoiding increasing
the number of static constructors. Also, it removes the declaration of
kInternalError and kExternalError on Beta and Release since they won't be use
in these channels.
Assignee | ||
Comment 5•2 years ago
|
||
Pushed by shes050117@gmail.com: https://hg.mozilla.org/integration/autoland/rev/ad12ab81d570 Using NS_NAMED_LITERNAL_CSTRING to avoid increasing the number of static constructors; r=asuth
Comment 7•2 years ago
|
||
bugherder |
Reporter | ||
Comment 8•2 years ago
|
||
I confirm this got fixed! I didn't mention the debug perf values, as they're not really important.
== Change summary for alert #18818 (as of Mon, 21 Jan 2019 05:48:07 GMT) ==
Improvements:
46% compiler_metrics num_static_constructors android-5-0-aarch64 opt 144.00 -> 78.00
45% compiler_metrics num_static_constructors android-5-0-x86_64 opt 146.00 -> 80.00
45% compiler_metrics num_static_constructors android-4-0-armv7-api16 opt 146.00 -> 80.00
45% compiler_metrics num_static_constructors android-4-2-x86 opt 146.00 -> 80.00
42% compiler_metrics num_static_constructors osx-cross opt 159.00 -> 93.00
40% compiler_metrics num_static_constructors linux64 opt valgrind 163.00 -> 98.00
39% compiler_metrics num_static_constructors linux64 pgo 165.00 -> 100.00
39% compiler_metrics num_static_constructors linux64 opt 165.00 -> 100.00
39% compiler_metrics num_static_constructors linux32 pgo 166.00 -> 101.00
39% compiler_metrics num_static_constructors linux32 opt 166.00 -> 101.00
39% compiler_metrics num_static_constructors windows2012-64 pgo 166.00 -> 102.00
39% compiler_metrics num_static_constructors windows2012-32 pgo 166.00 -> 102.00
38% compiler_metrics num_static_constructors windows2012-64 opt 167.00 -> 103.00
38% compiler_metrics num_static_constructors windows2012-32 opt 167.00 -> 103.00
35% compiler_metrics num_static_constructors linux64 opt base-toolchains 188.00 -> 123.00
20% compiler_metrics num_static_constructors windows2012-32 opt msvc 675.00 -> 537.00
18% compiler_metrics num_static_constructors windows2012-64 opt msvc 767.00 -> 629.00
18% compiler_metrics num_static_constructors windows2012-aarch64 opt msvc-aarch64 768.00 -> 630.00
For up to date results, see: https://treeherder.mozilla.org/perf.html#/alerts?id=18818
Reporter | ||
Updated•2 years ago
|
Updated•2 years ago
|
Description
•