dom/quota/QuotaCommon.h
@@ -73,11 +73,12 @@ BEGIN_QUOTA_NAMESPACE
 
 // Telemetry keys to indicate types of errors.
 #ifdef NIGHTLY_BUILD
-const nsCString kInternalError = NS_LITERAL_CSTRING("internal");
-const nsCString kExternalError = NS_LITERAL_CSTRING("external");
+extern const nsLiteralCString kInternalError;
+extern const nsLiteralCString kExternalError;
 #else
-const nsCString kInternalError = EmptyCString();
-const nsCString kExternalError = EmptyCString();
+// No need for these when we're not collecting telemetry.
+#  define kInternalError
+#  define kExternalError
 #endif
 
 class BackgroundThreadObject {
